[tool.poetry]
name = "elston-esphome"
version = "0.1.0"
description = ""
authors = ["elstonayx <elston@elstonayx.co>"]

[tool.poetry.dependencies]
python = "^3.10"
wheel = "^0.37.1"
esphome = "^2022.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
